# ocaml-projects

./: .gitignore  README.org
cohttp-playground/: README.org
cohttp-playground/src/: .merlin  ctfp.atd  ctfp_j.ml  ctfp_j.mli  ctfp_t.ml  dune  main.ml
concurrent-programming/: .merlin  README.org  dune  main.ml
cs3110/chapter2/: README.org
cs3110/chapter3/: .merlin  README.org  _tags  sum.ml  sum_test.ml
cs3110/chapter5/: MyMap.ml  README.org  foo.ml  foo.mli  liststack.ml  mystack.ml  mystack.mli  set.ml  setincludes.ml
cs3110/chapter8/: README.org  bst.ml  fibs.ml  rbl.ml
json-parsing/: .merlin  README.org  book.json  dune  main.ml  selecting_values.ml
more-ocaml/: README.org
ocaml-pearls/: ocaml-pearls.opam
ocaml-pearls/lib/: dune
ocaml-pearls/lib/pearl1/: README.org  dune  smallest_free_number.ml  smallest_free_number.mli
okasaki-pfds/: README.org
okasaki-pfds/chapter2/: dune
okasaki-pfds/chapter3/: README.org  dune
real-world-ocaml/: README.org
real-world-ocaml/compiler-backend/: .merlin  README.org  a.out  bench_patterns.ml  dune  pattern_monomorphic_large.cmi  pattern_monomorphic_large.cmo  pattern_monomorphic_large.ml  pattern_polymorphic.cmi  pattern_polymorphic.cmo
real-world-ocaml/compiler-frontend/: README.org
real-world-ocaml/concurrent-programming/: README.org  dune  io_example.ml
real-world-ocaml/error-handling/: README.org
real-world-ocaml/files-and-modules/: .merlin  README.org  counter.ml  counter.mli  dune  freq.ml
scaml/: dune  scaml.ml
shell-scripting/: README.org
todolist/: README.org
(+47 files in other folders)
